syntax = "proto3";

package supplier;

option go_package = "github.com/walterwanderley/xo-grpc/_examples/northwind/proto/supplier";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "typespb.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "github.com/walterwanderley/xo-grpc/_examples/northwind";
        version: "1.0";
        description: "Boilerplate code generated by xo-grpc. Modify proto/*.proto files then run 'compile.sh' script on proto directory to change the services interface.";
        contact: {
            name: "xo-grpc - Walter Wanderley";
            url: "https://github.com/walterwanderley/xo-grpc";
        };
    };
};
service SupplierService {
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/supplier"
            body: "*"
            
        };
    }
    
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/supplier/{SupplierID}"
            body: "*"
            
        };
    }
    
    rpc Upsert(UpsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/supplier/upsert"
            body: "*"
            
        };
    }
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/supplier/{SupplierID}"
            
        };
    }
    
    rpc SupplierBySupplierID(SupplierBySupplierIDRequest) returns (typespb.Supplier) {
        option (google.api.http) = {
            get: "/v1/supplier/{supplierID}"
            
        };
    }
    
}

message InsertRequest { 
    .google.protobuf.StringValue Address = 1;
    .google.protobuf.StringValue City = 2;
    string CompanyName = 3;
    .google.protobuf.StringValue ContactName = 4;
    .google.protobuf.StringValue ContactTitle = 5;
    .google.protobuf.StringValue Country = 6;
    .google.protobuf.StringValue Fax = 7;
    .google.protobuf.StringValue Homepage = 8;
    .google.protobuf.StringValue Phone = 9;
    .google.protobuf.StringValue PostalCode = 10;
    .google.protobuf.StringValue Region = 11;
    int32 SupplierID = 12;
}

message UpdateRequest { 
    .google.protobuf.StringValue Address = 1;
    .google.protobuf.StringValue City = 2;
    string CompanyName = 3;
    .google.protobuf.StringValue ContactName = 4;
    .google.protobuf.StringValue ContactTitle = 5;
    .google.protobuf.StringValue Country = 6;
    .google.protobuf.StringValue Fax = 7;
    .google.protobuf.StringValue Homepage = 8;
    .google.protobuf.StringValue Phone = 9;
    .google.protobuf.StringValue PostalCode = 10;
    .google.protobuf.StringValue Region = 11;
    // Output only.
    int32 SupplierID = 12;
}

message UpsertRequest { 
    .google.protobuf.StringValue Address = 1;
    .google.protobuf.StringValue City = 2;
    string CompanyName = 3;
    .google.protobuf.StringValue ContactName = 4;
    .google.protobuf.StringValue ContactTitle = 5;
    .google.protobuf.StringValue Country = 6;
    .google.protobuf.StringValue Fax = 7;
    .google.protobuf.StringValue Homepage = 8;
    .google.protobuf.StringValue Phone = 9;
    .google.protobuf.StringValue PostalCode = 10;
    .google.protobuf.StringValue Region = 11;
    int32 SupplierID = 12;
}

message DeleteRequest { 
    int32 SupplierID = 1;
}

message SupplierBySupplierIDRequest { 
    int32 supplierID = 1;
}
